<resources>
    <string name="app_name">Zest 19</string>
    <string name="title_activity_main">Zest 19</string>
    <string name="title_home">Home</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Live</string>
    <string name="tab_text_2">Played</string>
    <string name="match_ended">Match Ended</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notification</string>

    <string name="divider_bullet">•</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_fragment">Search</string>
    <string name="profile_fragment">Profile</string>
    <string name="offers_fragment">Offers</string>
    <string name="home_fragment">HOme</string>
    <string name="hockey">HOCKEY</string>
    <string name="kabbadi">KABBADI</string>
    <string name="kho_kho">KHO-KHO</string>
    <string name="football">FOOTBALL</string>
    <string name="handball">HANDBALL</string>
    <string name="basket_ball">BASKET BALL</string>
    <string name="volley_ball">VOLLEY BALL</string>
    <string name="badminton">BADMINTON</string>
    <string name="lawn_tennis">LAWN TENNIS</string>
    <string name="table_tennis">TABLE TENNIS</string>
    <string name="ball_badminton">BALL BADMINTON</string>
    <string name="base_ball">BASE BALL</string>
    <string name="cricket">CRICKET</string>
    <string name="box_cricket">BOX CRICKET</string>
    <string name="mix_cricket">MIX CRICKET</string>
    <string name="title_activity_main4">Main4Activity</string>

    <string name="title_activity_home_zest">HomeZest</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_events">Score Board</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_offers">Offers</string>
    <string name="title_leaderboard">Leader Board</string>
    <string name="msg_subscribed">Subscribed</string>
    <string name="msg_subscribe_failed">Failed</string>
    <string name="special_events">Special Events</string>
    <string name="no_data_to_display">Nothing Here!</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">LET\'S GO!</string>

    <string name="slide_1_title">Welcome!</string>
    <string name="slide_1_desc">Zest\'19 is Live!</string>

    <string name="slide_2_title">Live Scores</string>
    <string name="slide_2_desc">Get Live Updates anytime, anywhere!</string>

    <string name="slide_4_title">Discount Coupons</string>
    <string name="slide_4_desc">Exclusive in app Discount Coupons!</string>

    <string name="slide_3_title">Leader Board</string>
    <string name="slide_3_desc">See who is Leading in Overall Scores!</string>

    <string name="transition_string">hello</string>

    <string name="detail1">\u0009\u0009\u0009\u0009Abiding by our theme "Transcending Boundaries", we\'re showcasing our special event "Wheelchair Basketball", a short game to be played by the retired armymen of Paraplegic Rehabilitation Center on the opening day of ZEST19. Come witness the elite skill, pure athleticism, and dynamic speed that allows our para athletes to captivate audiences around the globe!</string>
    <string name="detail2">\u0009\u0009\u0009\u0009From the slums of Mumbai, to probably one of the best BMX stuntman in India, 26 year old Annul has come a long way. On the 25th of January, watch him demonstrate his jaw-dropping skills, and prepare to get mesmerized during our special event!</string>
    <string name="about_us">About Us</string>
    <string name="simple_fragment_transition">hello</string>
    <string name="name1">Wheelchair Basketball</string>
    <string name="date1">24-01-2018</string>
    <string name="time1">6:00 PM</string>
    <string name="name2">BMX Bike Show</string>
    <string name="date2">25-01-2018</string>
    <string name="time2">6:30 PM</string>
</resources>
