<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/detailImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bmx"
        android:transitionName="@string/simple_fragment_transition" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:gravity="center"
            android:text="@string/name2"
            style="@style/AppTheme.Headline"
            android:transitionName="@string/simple_fragment_transition"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date2"
            style="@style/AppTheme.Body1"
            android:transitionName="@string/simple_fragment_transition"
            android:padding="8dp" />

        <TextView
            style="@style/AppTheme.TextDivider"
            android:text="@string/divider_bullet" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Body2"
            android:transitionName="@string/simple_fragment_transition"
            android:padding="8dp"
            android:text="@string/time1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/detailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/detail2" />

</LinearLayout>